--- a/otel/BUILD
+++ b/otel/BUILD
@@ -4,6 +4,12 @@
 
 load("@rules_java//java:defs.bzl", "java_library")
 load(
+    "//:build-visibility.bzl",
+    "IJWB_PACKAGES_VISIBILITY",
+    "PLUGIN_PACKAGES_VISIBILITY",
+)
+load("//:version.bzl", "VERSION")
+load(
     "//build_defs:build_defs.bzl",
     "intellij_plugin",
     "intellij_plugin_library",
@@ -11,20 +17,13 @@ load(
     "repackaged_files",
     "stamped_plugin_xml",
 )
-load("//:version.bzl", "VERSION")
 load(
     "//testing:test_defs.bzl",
     "intellij_integration_test_suite",
     "intellij_unit_test_suite",
 )
-load(
-    "//:build-visibility.bzl",
-    "IJWB_PACKAGES_VISIBILITY",
-    "PLUGIN_PACKAGES_VISIBILITY",
-)
 
 licenses(["notice"])
-
 
 intellij_plugin_library(
     name = "plugin_library",
@@ -44,54 +43,52 @@ stamped_plugin_xml(
     version = VERSION,
 )
 
-
 java_library(
-  name = "opentelemetry-exporter-otlp-common",
-  exports = [
-    ":opentelemetry-exporter-otlp-common-1_47_0_http_import",
-    ":opentelemetry-exporter-common-1_47_0_http_import",
-    ":opentelemetry-exporter-otlp-1_47_0_http_import",
-    ":opentelemetry-sdk-1_47_0_http_import",
-    ":opentelemetry-sdk-extension-autoconfigure-spi-1_47_0_http_import",
-    #":opentelemetry-exporter-sender-jdk-1_47_0_http_import",
-    ":opentelemetry-exporter-sender-grpc-managed-channel-1_47_0_http_import",
-  ],
-  visibility = ["//visibility:public"]
+    name = "opentelemetry-exporter-otlp-common",
+    visibility = ["//visibility:public"],
+    exports = [
+        ":opentelemetry-exporter-otlp-common-1_47_0_http_import",
+        ":opentelemetry-exporter-common-1_47_0_http_import",
+        ":opentelemetry-exporter-otlp-1_47_0_http_import",
+        ":opentelemetry-sdk-1_47_0_http_import",
+        ":opentelemetry-sdk-extension-autoconfigure-spi-1_47_0_http_import",
+        ":opentelemetry-exporter-sender-grpc-managed-channel-1_47_0_http_import",
+    ],
 )
 
 java_import(
-  name = "opentelemetry-exporter-otlp-common-1_47_0_http_import",
-  jars = ["@opentelemetry-exporter-otlp-common-1_47_0_http//file"],
+    name = "opentelemetry-exporter-otlp-common-1_47_0_http_import",
+    jars = ["@opentelemetry-exporter-otlp-common-1_47_0_http//file"],
 )
 
 java_import(
-  name = "opentelemetry-exporter-common-1_47_0_http_import",
-  jars = ["@opentelemetry-exporter-common-1_47_0_http//file"],
+    name = "opentelemetry-exporter-common-1_47_0_http_import",
+    jars = ["@opentelemetry-exporter-common-1_47_0_http//file"],
 )
 
 java_import(
-  name = "opentelemetry-exporter-otlp-1_47_0_http_import",
-  jars = ["@opentelemetry-exporter-otlp-1_47_0_http//file"],
+    name = "opentelemetry-exporter-otlp-1_47_0_http_import",
+    jars = ["@opentelemetry-exporter-otlp-1_47_0_http//file"],
 )
 
 java_import(
-  name = "opentelemetry-exporter-sender-jdk-1_47_0_http_import",
-  jars = ["@opentelemetry-exporter-sender-jdk-1_47_0_http//file"],
+    name = "opentelemetry-exporter-sender-jdk-1_47_0_http_import",
+    jars = ["@opentelemetry-exporter-sender-jdk-1_47_0_http//file"],
 )
 
 java_import(
-  name = "opentelemetry-exporter-sender-grpc-managed-channel-1_47_0_http_import",
-  jars = ["@opentelemetry-exporter-sender-grpc-managed-channel-1_47_0_http//file"],
+    name = "opentelemetry-exporter-sender-grpc-managed-channel-1_47_0_http_import",
+    jars = ["@opentelemetry-exporter-sender-grpc-managed-channel-1_47_0_http//file"],
 )
 
 java_import(
-  name = "opentelemetry-sdk-1_47_0_http_import",
-  jars = ["@opentelemetry-sdk-1_47_0_http//file"],
+    name = "opentelemetry-sdk-1_47_0_http_import",
+    jars = ["@opentelemetry-sdk-1_47_0_http//file"],
 )
 
 java_import(
-  name = "opentelemetry-sdk-extension-autoconfigure-spi-1_47_0_http_import",
-  jars = ["@opentelemetry-sdk-extension-autoconfigure-spi-1_47_0_http//file"],
+    name = "opentelemetry-sdk-extension-autoconfigure-spi-1_47_0_http_import",
+    jars = ["@opentelemetry-sdk-extension-autoconfigure-spi-1_47_0_http//file"],
 )
 
 java_library(
@@ -99,28 +96,26 @@ java_library(
     srcs = glob(["src/**/*.java"]),
     visibility = IJWB_PACKAGES_VISIBILITY,
     deps = [
-	":opentelemetry-exporter-otlp-common",
-	"@maven//:io_grpc_grpc_stub",
-	"@maven//:io_grpc_grpc_api",
-	"@maven//:io_grpc_grpc_core",
-	"@maven//:io_grpc_grpc_netty",
-	#"@maven//:io_opentelemetry_opentelemetry_sdk_metrics",
-	"//intellij_platform_sdk:jsr305",
-	"//intellij_platform_sdk:plugin_api",
-	
+        ":opentelemetry-exporter-otlp-common",
+        "@maven//:io_grpc_grpc_stub",
+        "@maven//:io_grpc_grpc_api",
+        "@maven//:io_grpc_grpc_core",
+        "@maven//:io_grpc_grpc_netty",
+        "//intellij_platform_sdk:jsr305",
+        "//intellij_platform_sdk:plugin_api",
     ],
 )
 
 intellij_plugin(
     name = "otel_bazel",
-    plugin_xml = ":stamped_plugin_xml",
     plugin_icons = ["//common:pluginIcon.svg"],
+    plugin_xml = ":stamped_plugin_xml",
     tags = [
         "incomplete-deps",  # remove this suppression and add any missing deps, see go/java-import-deps-checking-lsc
     ],
     deps = [
         ":plugin_library",
-    ]
+    ],
 )
 
 repackaged_files(
