--- a/otel/BUILD
+++ b/otel/BUILD
@@ -1,13 +1,8 @@
 #
-# Description: Builds ijwb
+# Description: Builds otel plugin
 #
 
 load("@rules_java//java:defs.bzl", "java_library")
-load(
-    "//:build-visibility.bzl",
-    "IJWB_PACKAGES_VISIBILITY",
-    "PLUGIN_PACKAGES_VISIBILITY",
-)
 load("//:version.bzl", "VERSION")
 load(
     "//build_defs:build_defs.bzl",
@@ -17,18 +12,12 @@ load(
     "repackaged_files",
     "stamped_plugin_xml",
 )
-load(
-    "//testing:test_defs.bzl",
-    "intellij_integration_test_suite",
-    "intellij_unit_test_suite",
-)
 
 licenses(["notice"])
 
 intellij_plugin_library(
     name = "plugin_library",
     plugin_xmls = ["src/META-INF/plugin.xml"],
-    visibility = PLUGIN_PACKAGES_VISIBILITY,
     deps = [":otel_lib"],
 )
 
@@ -36,7 +25,6 @@ stamped_plugin_xml(
     name = "stamped_plugin_xml",
     plugin_id = "com.snowflake.telemetry",
     plugin_name = "OTEL exporter extension",
-    # #api212: We depend on an API which is only contained in 2021.2.1+.
     since_build_numbers = {"212": "212.5080.55"},
     stamp_since_build = True,
     stamp_until_build = True,
@@ -56,47 +44,11 @@ java_library(
     ],
 )
 
-java_import(
-    name = "opentelemetry-exporter-otlp-common-1_47_0_http_import",
-    jars = ["@opentelemetry-exporter-otlp-common-1_47_0_http//file"],
-)
-
-java_import(
-    name = "opentelemetry-exporter-common-1_47_0_http_import",
-    jars = ["@opentelemetry-exporter-common-1_47_0_http//file"],
-)
-
-java_import(
-    name = "opentelemetry-exporter-otlp-1_47_0_http_import",
-    jars = ["@opentelemetry-exporter-otlp-1_47_0_http//file"],
-)
-
-java_import(
-    name = "opentelemetry-exporter-sender-jdk-1_47_0_http_import",
-    jars = ["@opentelemetry-exporter-sender-jdk-1_47_0_http//file"],
-)
-
-java_import(
-    name = "opentelemetry-exporter-sender-grpc-managed-channel-1_47_0_http_import",
-    jars = ["@opentelemetry-exporter-sender-grpc-managed-channel-1_47_0_http//file"],
-)
-
-java_import(
-    name = "opentelemetry-sdk-1_47_0_http_import",
-    jars = ["@opentelemetry-sdk-1_47_0_http//file"],
-)
-
-java_import(
-    name = "opentelemetry-sdk-extension-autoconfigure-spi-1_47_0_http_import",
-    jars = ["@opentelemetry-sdk-extension-autoconfigure-spi-1_47_0_http//file"],
-)
-
 java_library(
     name = "otel_lib",
     srcs = glob(["src/**/*.java"]),
-    visibility = IJWB_PACKAGES_VISIBILITY,
     deps = [
-        ":opentelemetry-exporter-otlp-common",
+        "//otel/libs:opentelemetry-exporter-libs",
         "@maven//:io_grpc_grpc_stub",
         "@maven//:io_grpc_grpc_api",
         "@maven//:io_grpc_grpc_core",
@@ -108,11 +60,7 @@ java_library(
 
 intellij_plugin(
     name = "otel_bazel",
-    plugin_icons = ["//common:pluginIcon.svg"],
     plugin_xml = ":stamped_plugin_xml",
-    tags = [
-        "incomplete-deps",  # remove this suppression and add any missing deps, see go/java-import-deps-checking-lsc
-    ],
     deps = [
         ":plugin_library",
     ],
